--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
   <ul>
     <li class="dropdown"><a href="#">File <i class="icon-caret-down"></i><i class="icon-sort"></i></a>
       <ul class="sub">
-        <li><a href="#" id="openf">Open</a></li>
-        <li><a href="#" id="savef">Save</a></li>
-        <li><a href="#" id="ethreejs">Export As ThreeJS</a></li>
-        <li><a href="#" id="icitygml">Import From CityGML</a></li>
+        <li><a href="#" id="{{constants.importers.gs}}" name="importers">Open</a></li>
+        <li><a href="#" id="{{constants.exporters.gs}}" name="exporters">Save</a></li>
+        <li><a href="#" id="{{constants.exporters.threejs}}" name="exporters">Export As ThreeJS</a></li>
+        <li><a href="#" id="{{constants.importers.citygml}}" name="importers">Import From CityGML</a></li>
         <li><a href="#">Exit</a></li>
       </ul>
     </li>
