--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,9 @@
   </ul>
   </div>
 </nav>
-<div id="container"></div>
+<div id="container">
+  <div id='sidebar' class='sidebar'></div>
+</div>
 <div id="toolwindow">
 
 </div>
