ng module initiated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
 <div id="appdiv">
   <split direction="vertical">
 <nav class="toolbar">
@@ -36,4 +36,40 @@
 </split-area>
 </split>
 </div>
-</body>
+</body> -->
+
+
+<div id="appdiv">
+
+  <!-- navigation bar -->
+  <nav class="toolbar">
+    <div>
+      <ul>
+        <li class="dropdown"><a href="#">File <i class="icon-caret-down"></i><i class="icon-sort"></i></a>
+          <ul class="sub">
+            <li><a href="#" name="importers">Open</a></li>
+            <li><a href="#" name="exporters">Save</a></li>
+            <li><a href="#" name="exporters">Export As ThreeJS</a></li>
+            <li><a href="#" name="importers">Import From CityGML</a></li>
+            <li><a href="#">Exit</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+              <a href="#">Wiki<i class="icon-caret-down"></i><i class="icon-sort"></i></a>
+              <ul class="sub">
+              <li><a href="https://github.com/akiajk/gs-JSON">SourceCode</a></li>
+              <li><a href="https://github.com/akiajk/gs-JSON">Tutorial</a></li>
+              </ul>
+        </li>  
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <gs-viewer></gs-viewer>
+
+  <!-- gs-viewer demo -->
+
+
+</div>
