--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,7 @@ html, body {
   position: absolute;
   width: 99%;
   height: 98%;
-  background-color: black;
+  background-color: white;
   overflow: hidden;
 }
 
