--- a/src/app/toolwindow/toolwindow.component.html
+++ b/src/app/toolwindow/toolwindow.component.html
@@ -1,14 +1,8 @@
 <div id="toolwindow">
   <div id="toolbar">
-  	<split direction="Horizon">
-  	<button id="close"  [class.visible]="Visible === 'close'" (click)="close(Visible)" name="tools"> ▼ </button>
-  	<button id="Attributes"  [class.visible]="Visible === 'attributes'" (click)="Attributes(Visible)" name="tools">Attributes</button>
-  	<button id="Groups" [class.visible]="Visible === 'groups'" (click)="Groups(Visible)" name="tools">Groups</button>
-  </split>
+  	Toolbar
   </div>
   <div id="toolview">
-    <div id="closeview" *ngIf="Visible === 'close'"></div>
-    <app-attribute *ngIf="Visible === 'attributes'"></app-attribute>
-    <app-groups *ngIf="Visible === 'groups'"></app-groups>
+  	Toolview
   </div>
 </div>
