--- a/src/app/viewer/viewer.component.css
+++ b/src/app/viewer/viewer.component.css
@@ -1,38 +1,90 @@
 #container {
   position: relative;
-  height:648px;
+  height:704px;
+  width: 1562px;
   margin:0px;
   overflow: hidden;
   color: white;
+  float: right;
 }
 
-#sidebar {
-  position: relative;
-  height:100%;
+#rotating{
   width: 30px;
-  float: right;
-  overflow: hidden;
-  color: white;
-  display: none;
-}
-#change{
-  width: 5px;
-  height: 50px;
+  height: 25px;
   font-size:15px;
   right:0px; 
   text-align:center;
   position: absolute;
-}
-#setting{
-  width: 100%;
-  float:left;
+  top: 0px;
+  background-color:transparent;
+  border:0;
 }
 
+#paning{
+  width: 30px;
+  height: 25px;
+  font-size:15px;
+  right:0px; 
+  text-align:center;
+  position: absolute;
+  top: 25px;
+  background-color:transparent;
+  border:0;
+}
+
+#zooming{
+  width: 30px;
+  height: 25px;
+  font-size:15px;
+  right:0px; 
+  text-align:center;
+  position: absolute;
+  margin-top: 50px;
+  background-color:transparent;
+  border:0;
+}
+
+#zoomingfit{
+  width: 30px;
+  height: 25px;
+  font-size:15px;
+  right:0px; 
+  text-align:center;
+  position: absolute;
+  margin-top: 75px;
+  background-color:transparent;
+  border:0;
+}
+
+#selecting{
+  width: 30px;
+  height: 25px;
+  font-size:15px;
+  right:0px; 
+  text-align:center;
+  position: absolute;
+  margin-top: 120px;
+  background-color:transparent;
+  border:0;
+}
+
+#setting{
+  width: 30px;
+  height: 25px;
+  font-size:15px;
+  right:0px; 
+  text-align:center;
+  position: absolute;
+  margin-top: 145px;
+  background-color:transparent;
+  border:0;
+}
+
+
 .selected{
-  background: #696969;
-  color: white;
+  color: grey;
+
 }
 .visible{
-  background: #696969;
-  color: white;
+  color: grey;
 }
