--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,18 +1,11 @@
-<div id="sidebar">
-	<split direction="vertical">
-  	<button id="setting" [class.selected]="settingVisible" (click)= "settingVisible =!settingVisible">
-      <i class="fa fa-cog"></i>
-    </button>
-  	<button id="zooming" [class.visible]="Visible === 'zoom'" (click)="zoom(Visible)"><i class="fa fa-search"></i></button>
-  	<button id="paning" [class.visible]="Visible === 'pan'" (click)="pan(Visible)"><i class="fa fa-hand-paper-o"></i></button>
-  	<button id="rotating" [class.visible]="Visible === 'rotate'" (click)="rotate(Visible)"><i class="fa fa-refresh"></i></button>
-  	<button id="selecting" [class.visible]="Visible === 'select'" (click)="select(Visible)"><i class="fa fa-mouse-pointer"></i></button>
-  	<i class="icon-camera-retro"></i>
-	</split>
-</div>
 <div id="container"  (mousemove)="onDocumentMouseMove($event)" (click)="onDocumentMouseDown($event)" >
-  <!--<app-canvas></app-canvas>-->
-	<button id="change" (click)="sidebar(initial)">{{changeside}}</button>
+  <button id="rotating" [class.visible]="Visible === 'rotate'" (click)="rotate(Visible)"><i class="fa fa-refresh"></i></button>
+  <button id="paning"  [class.visible]="Visible === 'pan'" (click)="pan(Visible)"><i class="fa fa-hand-paper-o"></i></button>
+  <button id="zooming"  [class.visible]="Visible === 'zoom'" (click)="zoom(Visible)"><i class="fa fa-search"></i></button>
+  <button id="zoomingfit"  [class.visible]="Visible === 'zoomfit'" (click)="zoomfit(Visible)"><i class="fa fa-arrows-alt"></i></button>
+  <button id="selecting" [class.visible]="selectingVisible" (click)= "selectingVisible =!selectingVisible"><i class="fa fa-mouse-pointer"></i></button>
+  <button id="setting" [class.selected]="settingVisible" (click)= "settingVisible =!settingVisible">
+      <i class="fa fa-cog"></i></button>
   <app-setting *ngIf="settingVisible == true"></app-setting>
 </div>
 
