--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,12 +26,12 @@
   </div>
 </nav>-->
 <split-area [size]="99" id="splitcontainer">
-  <div>
+  <div style="height: 100%">
     <split direction="horizontal">
-      <split-area [size]="10" id="splitgroups">
+      <split-area [size]="0.5" id="splitgroups">
         <app-groups></app-groups>
       </split-area>
-      <split-area [size]="90" id="splitviewer">
+      <split-area [size]="99.5" id="splitviewer">
         <app-viewer></app-viewer>
       </split-area>
     </split>
