--- a/src/app/toolwindow/toolwindow.component.html
+++ b/src/app/toolwindow/toolwindow.component.html
@@ -1,6 +1,12 @@
 <div id="toolwindow">
   <div id="toolbar">
-  	Toolbar
+  	<button id="point"  [class.visible]="Visible === 'pan'" (click)="pan(Visible)"><i class="fa fa-dot-circle-o"></i></button>
+  	<button id="vertice"  [class.visible]="Visible === 'pan'" (click)="pan(Visible)">V</button>
+  	<button id="edge"  [class.visible]="Visible === 'pan'" (click)="pan(Visible)">E</button>
+  	<button id="wire"  [class.visible]="Visible === 'pan'" (click)="pan(Visible)">W</button>
+  	<button id="face"  [class.visible]="Visible === 'pan'" (click)="pan(Visible)">F</button>
+  	<button id="object"  [class.visible]="Visible === 'pan'" (click)="pan(Visible)"><i class="fa fa-map"></i></button>
+  	<input id="selected" type="checkbox" (click)="changegrid()"> <label id="selectedname" value="selected">Show selected only</label>
   </div>
   <div id="toolview">
   	Toolview
