--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
 
   <!-- navigation bar -->
-  <nav class="toolbar">
+  <!-- <nav class="toolbar">
     <div>
       <ul>
         <li class="dropdown"><a href="#">File <i class="icon-caret-down"></i><i class="icon-sort"></i></a>
@@ -25,7 +25,7 @@
       </ul>
     </div>
   </nav>
-
+ -->
   <!-- gs-viewer demo -->
   <gs-viewer [data]="gs_dummy_data"></gs-viewer>
 
