--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -39,3 +39,20 @@
 #selected{
   margin-left:30px;
 }
+.visible{
+  color: grey;
+}
+#table{
+  width:100% ;
+  height: 15px;
+}
+#tablename{
+  width:100% ;
+  height: 15px;
+  color:grey;
+}
+#numberbutton{
+  width:100%;
+  background-color:white;
+  border:0;
+}
