--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -1,16 +1,16 @@
 <div id="toolwindow">
   <div id="toolbar">
-    <button id="point" [class.visible]="Visible === 'point'" (click)="point(Visible)"><i class="fa fa-dot-circle-o"></i></button>
-    <button id="vertice" [class.visible]="Visible === 'vertice'" (click)="vertice(Visible)">V</button>
-    <button id="edge" [class.visible]="Visible === 'edge'" (click)="edge(Visible)">E</button>
-    <button id="wire" [class.visible]="Visible === 'wire'" (click)="wire(Visible)">W</button>
-    <button id="face" [class.visible]="Visible === 'face'" (click)="face(Visible)">F</button>
-    <button id="object" [class.visible]="Visible === 'object'" (click)="object(Visible)"><i class="fa fa-map"></i></button>
+    <button id="point" [class.visible]="Visible === 'Points'" (click)="point(Visible)"><i class="fa fa-dot-circle-o"></i></button>
+    <button id="vertice" [class.visible]="Visible === 'Vertices'" (click)="vertice(Visible)">V</button>
+    <button id="edge" [class.visible]="Visible === 'Edges'" (click)="edge(Visible)">E</button>
+    <button id="wire" [class.visible]="Visible === 'Wires'" (click)="wire(Visible)">W</button>
+    <button id="face" [class.visible]="Visible === 'Faces'" (click)="face(Visible)">F</button>
+    <button id="object" [class.visible]="Visible === 'Objects'" (click)="object(Visible)"><i class="fa fa-map"></i></button>
     <input id="selected" type="checkbox" (click)="changeselected()">
     <label id="selectedname" value="selected">Show selected only</label>
   </div>
   <div id="toolview">
-    <div *ngIf="Visible === 'point'">
+    <div *ngIf="Visible === 'Points'">
       <table border="1" cellspacing="0" cellpadding="0" id="table" name="table" bordercolor="#d0d0d0">
         <tr>
           <td name="Number" align=center width="40%" align=center>ID</td>
@@ -28,7 +28,7 @@
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'vertice'">
+    <div *ngIf="Visible === 'Vertices'">
       <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" width="40%">
         <tr>
           <td  align=center >Vertices Lable</td>
@@ -40,7 +40,7 @@
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'edge'">
+    <div *ngIf="Visible === 'Edges'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td  align=center>Edge ID</td>
@@ -52,7 +52,7 @@
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'wire'">
+    <div *ngIf="Visible === 'Wires'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td  align=center>Wire ID</td>
@@ -64,7 +64,7 @@
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'face'">
+    <div *ngIf="Visible === 'Faces'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td  align=center>Face ID</td>
@@ -76,7 +76,7 @@
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'object'">
+    <div *ngIf="Visible === 'Objs'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td name="Number" align=center  align=center>Object ID</td>
