--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -5,7 +5,7 @@
     <button id="edge" [class.visible]="Visible === 'Edges'" (click)="edge(Visible)">E</button>
     <button id="wire" [class.visible]="Visible === 'Wires'" (click)="wire(Visible)">W</button>
     <button id="face" [class.visible]="Visible === 'Faces'" (click)="face(Visible)">F</button>
-    <button id="object" [class.visible]="Visible === 'Objects'" (click)="object(Visible)"><i class="fa fa-map"></i></button>
+    <button id="object" [class.visible]="Visible === 'Objs'" (click)="object(Visible)"><i class="fa fa-map"></i></button>
     <input id="selected" type="checkbox" (click)="changeselected()">
     <label id="selectedname" value="selected">Show selected only</label>
   </div>
@@ -84,7 +84,7 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute " width="40%">
         <tr>
-          <button  id="numberbutton" (click)=Onselect(datascale.id)>{{datascale.id}}</button>
+          <button  id="numberbutton">{{datascale.id}}</button>
         </tr>
       </table>
     </div>
