--- a/src/app/gs-viewer/viewer/viewer.component.css
+++ b/src/app/gs-viewer/viewer/viewer.component.css
@@ -41,7 +41,7 @@
   margin-top: 50px;
   background-color:transparent;
   border:0;
-}
+}*/
 
 #zoomingfit{
   width: 30px;
@@ -50,12 +50,12 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 75px;
+  margin-top: 10px;
   background-color:transparent;
   border:0;
 }
 
-#selecting{
+/*#selecting{
   width: 30px;
   height: 25px;
   font-size:15px;
@@ -74,7 +74,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  top: 10px;
+  top: 35px;
   background-color:transparent;
   border:0;
 }
