--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -8,6 +8,14 @@
     <button id="object" [class.visible]="Visible === 'Objs'" (click)="object(Visible)"><i class="fa fa-map"></i></button>
     <input id="selected" type="checkbox" (click)="changeselected()">
     <label id="selectedname" value="selected">Show selected only</label>
+    <div id="select">
+      <input name="selectedge" type="checkbox" (click)="changeselected()">
+      <label id="selectedges" value="selected">Select Edges</label>
+      <input name="selectnames" type="checkbox" (click)="selectededges()">
+      <label id="selectwires" value="selected">Select Wires</label>
+      <input name="selectnames" type="checkbox" (click)="selectededges()">
+      <label id="selectfaces" value="selected">Select Face</label>
+    </div>
   </div>
   <div id="toolview">
     <div *ngIf="Visible === 'Points'">
@@ -37,7 +45,7 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="50%">
         <tr>
-          <button id="numberbutton" >{{datascale.id}}</button>
+          <button id="numberbutton" [class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id)>{{datascale.id}}</button>
           <td  align=center  width="50%">{{datascale.pointid}}</td>
         </tr>
       </table>
@@ -50,7 +58,7 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="40%">
         <tr>
-          <button id="numberbutton" >{{datascale.id}}</button>
+          <button id="numberbutton"[class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id) >{{datascale.id}}</button>
         </tr>
       </table>
     </div>
@@ -62,7 +70,7 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="40%">
         <tr>
-          <button id="numberbutton" >{{datascale.id}}</button>
+          <button id="numberbutton" [class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id)>{{datascale.id}}</button>
         </tr>
       </table>
     </div>
@@ -74,7 +82,7 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="40%">
         <tr>
-          <button id="numberbutton" >{{datascale.id}}</button>
+          <button id="numberbutton"  [class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id)>{{datascale.id}}</button>
         </tr>
       </table>
     </div>
@@ -86,7 +94,7 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute " width="40%">
         <tr>
-          <button  id="numberbutton">{{datascale.id}}</button>
+          <button  id="numberbutton" [class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id) >{{datascale.id}}</button>
         </tr>
       </table>
     </div>
