--- a/src/app/gs-viewer/setting/setting.component.css
+++ b/src/app/gs-viewer/setting/setting.component.css
@@ -5,7 +5,7 @@
   right:30px;
   color:#395d73;
   width:400px;
-  height:200px;
+  height:430px;
 }
 #grid{
   margin-left: 20px;
@@ -38,8 +38,28 @@
   width: 60%;
   font-family:sans-serif;
 }
+#oprange{
+  margin-left: 20px;
+  width: 60%;
+  font-family:sans-serif;
+}
 
 #name{
+  font-family:sans-serif;
+}
+#redrange{
+  margin-left: 60px;
+  width: 60%;
+  font-family:sans-serif;
+}
+#greenrange{
+  margin-left: 60px;
+  width: 60%;
+  font-family:sans-serif;
+}
+#bluerange{
+  margin-left: 60px;
+  width: 60%;
   font-family:sans-serif;
 }
 
