--- a/src/app/gs-viewer/setting/setting.component.html
+++ b/src/app/gs-viewer/setting/setting.component.html
@@ -9,4 +9,13 @@
   <mat-slider name="range" id="satrange" min=0 max=1 step=0.01 value={{saturation}} #slider1 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider1.value.toPrecision(2)}}</label><br/>
   &nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >lightness</label>
   <mat-slider name="range" id="lirange" min=0 max=1 step=0.01 value={{lightness}} #slider2 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider2.value.toPrecision(2)}}</label><br/>
+  &nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >opacity</label>&nbsp;&nbsp;&nbsp;
+  <mat-slider name="range" id="oprange" min=0 max=1 step=0.01 value={{opacity}} #slider3 (change)="changeopa(slider3.value)" ></mat-slider><label id="name" >{{slider3.value.toPrecision(2)}}</label><br/>
+  <hr/>&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Backeground Color</label>&nbsp;&nbsp;<br/>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >R</label>
+  <mat-slider  name="range" id="redrange" min=0 max=1 step=0.01  value={{red}} #slider4 (change)="changeback(slider4.value,slider5.value,slider6.value)" ></mat-slider><label id="name" >{{slider4.value.toPrecision(2)}}</label><br/>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >G</label>
+  <mat-slider name="range" id="greenrange" min=0 max=1 step=0.01 value={{green}} #slider5 (change)="changeback(slider4.value,slider5.value,slider6.value)" ></mat-slider><label id="name" >{{slider5.value.toPrecision(2)}}</label><br/>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >B</label>
+  <mat-slider name="range" id="bluerange" min=0 max=1 step=0.01 value={{blue}} #slider6 (change)="changeback(slider4.value,slider5.value,slider6.value)" ></mat-slider><label id="name" >{{slider6.value.toPrecision(2)}}</label><br/>
 </div>
